--- a/apps/core/static/scss/_variables.scss
+++ b/apps/core/static/scss/_variables.scss
@@ -2,6 +2,7 @@ $black: #101010;
 
 $body-bg: #fbfbfb;
 $body-color: #060606;
+$text-light: #858585;
 $inverse-bg: $body-color;
 $inverse-color: $body-bg;
 
